feat: Implement endpoints
