# rest-api/openapi/custom.yaml
@@ -1,3 +1,6 @@
+# Copyright DB InfraGO AG and contributors
+# SPDX-License-Identifier: Apache-2.0
+
 openapi: 3.0.3
 info:
   title: Capella API
@@ -5,7 +8,7 @@ info:
   version: 0.0.1
 servers:
   - url: http://localhost:5007/api/v1
-    description: Embeded Capella REST API server
+    description: Embedded Capella REST API server
 tags:
   - name: Diagrams
     description: >
@@ -181,6 +184,30 @@ paths:
           description: Project saved successfully
         '404':
           description: Project not found
+  /projects/{project_name}/diagram-editors:
+    get:
+      tags:
+        - Diagrams
+      summary: Get a list of all open diagram editors for a project by name
+      operationId: getDiagramEditorsByProjectName
+      parameters:
+        - name: project_name
+          in: path
+          required: true
+          description: Unique name of the project
+          schema:
+            type: string
+      responses:
+        '200':
+          description: A list of open diagram editors
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DiagramEditor'
+        '404':
+          description: Project not found
   /projects/{project_name}/diagrams:
     get:
       tags:
@@ -236,6 +263,19 @@ components:
         documentation:
           type: string
           description: Documentation of the diagram
+    DiagramEditor:
+      type: object
+      description: A diagram editor in Capella
+      properties:
+        id:
+          type: string
+          description: Unique identifier of the diagram
+        name:
+          type: string
+          description: Name of the diagram
+        uri:
+          type: string
+          description: URI of the diagram
     EObject:
       type: object
       description: An abstract model object
