# rest-api/src/com/db/capella/api/impl/ProjectsApiServiceImpl.java
@@ -1,0 +1,314 @@
+// Copyright DB InfraGO AG and contributors
+// SPDX-License-Identifier: Apache-2.0
+
+package com.db.capella.api.impl;
+
+import java.io.File;
+import java.util.Collection;
+
+import org.eclipse.core.resources.IFile;
+import org.eclipse.core.resources.IProject;
+import org.eclipse.core.resources.IProjectDescription;
+import org.eclipse.core.resources.IWorkspace;
+import org.eclipse.core.resources.ResourcesPlugin;
+import org.eclipse.core.runtime.IPath;
+import org.eclipse.core.runtime.NullProgressMonitor;
+import org.eclipse.core.runtime.Path;
+import org.eclipse.emf.common.util.URI;
+import org.eclipse.sirius.business.api.dialect.DialectManager;
+import org.eclipse.sirius.business.api.session.Session;
+import org.eclipse.sirius.business.api.session.SessionManager;
+import org.eclipse.sirius.diagram.ui.part.SiriusDiagramEditor;
+import org.eclipse.sirius.ui.business.api.session.SessionEditorInput;
+import org.eclipse.sirius.viewpoint.DRepresentationDescriptor;
+import org.eclipse.ui.IEditorInput;
+import org.eclipse.ui.IEditorPart;
+import org.eclipse.ui.IEditorReference;
+import org.eclipse.ui.IWorkbench;
+import org.eclipse.ui.IWorkbenchPage;
+import org.eclipse.ui.IWorkbenchWindow;
+import org.eclipse.ui.PartInitException;
+import org.eclipse.ui.PlatformUI;
+
+import com.db.capella.api.ApiException;
+import com.db.capella.api.ApiResponseMessage;
+import com.db.capella.api.NotFoundException;
+import com.db.capella.api.ProjectsApiService;
+import com.db.capella.integration.WorkspaceProjectInt;
+import com.db.capella.model.Diagram;
+import com.db.capella.model.DiagramEditor;
+import com.db.capella.model.ImportProjectRequest;
+
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.SecurityContext;
+
+@jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", comments = "Generator version: 7.7.0")
+public class ProjectsApiServiceImpl extends ProjectsApiService {
+    private static URI getEMFURIForAirdFile(IPath directoryPath) {
+        File directory = directoryPath.toFile();
+        if (directory.isDirectory()) {
+            File[] files = directory.listFiles((dir, name) -> name.endsWith(".aird"));
+            if (files != null && files.length > 0) {
+                // Assuming there's only one .aird file in the directory
+                File airdFile = files[0];
+                return URI.createFileURI(airdFile.getAbsolutePath());
+            }
+        }
+        return null;
+    }
+
+    private Session getSession(IProject project) throws ApiException {
+        URI airdFileName = getEMFURIForAirdFile(project.getLocation());
+        if (airdFileName == null) {
+            throw new ApiException(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(),
+                    "An .aird file is required to get the SystemEngineering");
+        }
+        final Session session = SessionManager.INSTANCE.getSession(airdFileName, new NullProgressMonitor());
+        if (session == null) {
+            throw new ApiException(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(),
+                    "Cannot get session for project");
+        }
+        return session;
+    }
+
+    private IProject getWorkspaceProjectByName(String name) throws ApiException {
+        IWorkspace workspace = ResourcesPlugin.getWorkspace();
+        IProject workspaceProject = workspace.getRoot().getProject(name);
+        if (!workspaceProject.exists()) {
+            throw new ApiException(Response.Status.NOT_FOUND.getStatusCode(), "Project named '" + name + "' not found");
+        }
+        return workspaceProject;
+    }
+
+    @Override
+    public Response closeProjectByName(String projectName, SecurityContext securityContext) throws NotFoundException {
+        IProject workspaceProject;
+        try {
+            workspaceProject = getWorkspaceProjectByName(projectName);
+        } catch (ApiException e) {
+            return Response.status(Response.Status.NOT_FOUND)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, e.getMessage())).build();
+        }
+        try {
+            workspaceProject.close(null);
+        } catch (Exception e) {
+            return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, e.getMessage())).build();
+        }
+        return Response.ok()
+                .entity(new ApiResponseMessage(ApiResponseMessage.OK, "Project '" + projectName + "' is closed."))
+                .build();
+    }
+
+    @Override
+    public Response deleteProjectByName(String projectName,
+            Boolean deleteContents,
+            SecurityContext securityContext)
+            throws NotFoundException {
+        IProject workspaceProject = null;
+        try {
+            workspaceProject = getWorkspaceProjectByName(projectName);
+        } catch (ApiException e) {
+            return Response.status(Response.Status.NOT_FOUND)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, e.getMessage())).build();
+        }
+        try {
+            workspaceProject.delete(deleteContents, true, null);
+        } catch (Exception e) {
+            return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, e.getMessage())).build();
+        }
+        return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "Project deleted")).build();
+    }
+
+    @Override
+    public Response getDiagramEditorsByProjectName(String projectName, SecurityContext securityContext)
+            throws NotFoundException {
+        java.util.List<DiagramEditor> diagramEditorList = new java.util.ArrayList<DiagramEditor>();
+        IWorkbench workbench = PlatformUI.getWorkbench();
+        IWorkbenchWindow[] windows = workbench.getWorkbenchWindows();
+        for (IWorkbenchWindow window : windows) {
+            IWorkbenchPage[] pages = window.getPages();
+            for (IWorkbenchPage page : pages) {
+                IEditorReference[] editorReferences = page.getEditorReferences();
+                for (IEditorReference editorReference : editorReferences) {
+                    // IEditorPart editorPart = editorReference.getEditor(false);
+                    // if (editorPart instanceof SiriusDiagramEditor) {
+                    try {
+                        IEditorInput input = editorReference.getEditorInput();
+                        if (input instanceof SessionEditorInput) {
+                            SessionEditorInput sessionEditorInput = (SessionEditorInput) input;
+                            URI uri = sessionEditorInput.getURI();
+                            IFile file = ResourcesPlugin.getWorkspace().getRoot()
+                                    .getFile(new Path(uri.toPlatformString(true)));
+                            IProject project = file.getProject();
+                            if (project.getName().equals(projectName)) {
+                                DiagramEditor diagramEditor = new DiagramEditor();
+                                diagramEditor.setName(sessionEditorInput.getName());
+                                diagramEditor.setUri(sessionEditorInput.getURI().toString());
+                                String repDesUri = sessionEditorInput.getRepDescUri().toString();
+                                diagramEditor.setId(repDesUri.split("#")[1]);
+                                diagramEditorList.add(diagramEditor);
+                                if (editorReference.getEditor(false) == null) {
+                                    System.out.println(sessionEditorInput.getName() + " is null");
+                                }
+                            }
+                        }
+                    } catch (PartInitException e) {
+                    }
+                }
+            }
+        }
+
+        return Response.ok().entity(diagramEditorList).build();
+    }
+
+    @Override
+    public Response getDiagramsByProjectName(String projectName, SecurityContext securityContext)
+            throws NotFoundException {
+        IProject workspaceProject = null;
+        try {
+            workspaceProject = getWorkspaceProjectByName(projectName);
+        } catch (ApiException e) {
+            return Response.status(Response.Status.NOT_FOUND)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, e.getMessage())).build();
+        }
+        Session session = null;
+        try {
+            session = getSession(workspaceProject);
+        } catch (ApiException e) {
+            return Response.status(Response.Status.NOT_FOUND)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, e.getMessage())).build();
+        }
+        Collection<DRepresentationDescriptor> representationDescriptors = DialectManager.INSTANCE
+                .getAllRepresentationDescriptors(session);
+        java.util.List<Diagram> diagramList = new java.util.ArrayList<Diagram>();
+        if (true) {
+            for (DRepresentationDescriptor representationDescriptor : representationDescriptors) {
+                Diagram diagram = new Diagram();
+                diagram.setId(representationDescriptor.getUid());
+                diagram.setName(representationDescriptor.getName());
+                // DRepresentation representation =
+                // representationDescriptor.getRepresentation();
+                // DDiagram dDiagram = (DDiagram) representation;
+                // for (DRepresentationElement representationElement :
+                // representation.getRepresentationElements()) {
+                // if (representationElement.getTarget() instanceof ModelElement) {
+                // ModelElement modelElement = (ModelElement) representationElement.getTarget();
+                // System.out.println(modelElement.getLabel());
+                // System.out.println(modelElement.getFullLabel());
+                // }
+                // }
+                // diagram.setId(representation.getUid());
+                // diagram.setDescription(representationDescriptor.getDescription());
+                // diagram.setName(representation.getName());
+                diagramList.add(diagram);
+            }
+        }
+        return Response.ok().entity(diagramList).build();
+    }
+
+    @Override
+    public Response getProjectByName(String projectName,
+            SecurityContext securityContext)
+            throws NotFoundException {
+        // do some magic!
+        return Response.ok()
+                .entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!"))
+                .build();
+    }
+
+    @Override
+    public Response importProject(ImportProjectRequest body, SecurityContext securityContext)
+            throws NotFoundException {
+        IWorkspace workspace = ResourcesPlugin.getWorkspace();
+        String projectFolderPath = body.getLocation();
+        File projectFolder = new File(projectFolderPath);
+        if (!projectFolder.exists()) {
+            return Response.status(Response.Status.NOT_FOUND)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, "Project folder not found")).build();
+        }
+        File dotProjectFile = new File(projectFolder, ".project");
+        if (!dotProjectFile.exists()) {
+            return Response.status(Response.Status.BAD_REQUEST)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR,
+                            "Project folder does not contain .project file"))
+                    .build();
+        }
+        IPath projectLocation = new Path(dotProjectFile.getAbsolutePath());
+        try {
+            IProjectDescription projectDescription = workspace
+                    .loadProjectDescription(projectLocation);
+            IProject project = workspace.getRoot().getProject(projectDescription.getName());
+            if (project.exists()) {
+                return Response.status(Response.Status.CONFLICT)
+                        .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, "Project already exists")).build();
+            }
+            project.create(projectDescription, null);
+            project.open(null);
+            WorkspaceProjectInt projectInt = new WorkspaceProjectInt(
+                    (org.eclipse.core.internal.resources.Project) project);
+            // todo: URL in response header is `http://localhost:5007/projects/(...)` which
+            // is wrong
+            return Response.created(new java.net.URI("/projects/" + projectInt.getName()))
+                    .build();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+                .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, "Failed to import project")).build();
+    }
+
+    @Override
+    public Response listProjects(SecurityContext securityContext)
+            throws NotFoundException {
+        IWorkspace workspace = ResourcesPlugin.getWorkspace();
+        IProject[] projects = workspace.getRoot().getProjects();
+        java.util.List<com.db.capella.model.WorkspaceProject> projectIntList = new java.util.ArrayList<com.db.capella.model.WorkspaceProject>();
+        for (IProject project : projects) {
+            WorkspaceProjectInt projectInt = new WorkspaceProjectInt(
+                    (org.eclipse.core.internal.resources.Project) project);
+            projectIntList.add(projectInt);
+        }
+        return Response.ok().entity(projectIntList).build();
+    }
+
+    @Override
+    public Response openProjectByName(String projectName, SecurityContext securityContext) throws NotFoundException {
+        IProject workspaceProject;
+        try {
+            workspaceProject = getWorkspaceProjectByName(projectName);
+        } catch (ApiException e) {
+            return Response.status(Response.Status.NOT_FOUND)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, e.getMessage())).build();
+        }
+        try {
+            workspaceProject.open(null);
+        } catch (Exception e) {
+            return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, e.getMessage())).build();
+        }
+        return Response.ok()
+                .entity(new ApiResponseMessage(ApiResponseMessage.OK, "Project '" + projectName + "' is opened."))
+                .build();
+    }
+
+    @Override
+    public Response saveProjectByName(String projectName,
+            SecurityContext securityContext)
+            throws NotFoundException {
+        IProject workspaceProject;
+        try {
+            workspaceProject = getWorkspaceProjectByName(projectName);
+        } catch (ApiException e) {
+            return Response.status(Response.Status.NOT_FOUND)
+                    .entity(new ApiResponseMessage(ApiResponseMessage.ERROR, e.getMessage())).build();
+        }
+        WorkspaceProjectInt projectInt = new WorkspaceProjectInt(
+                (org.eclipse.core.internal.resources.Project) workspaceProject);
+        projectInt.save();
+        return Response.ok()
+                .entity(new ApiResponseMessage(ApiResponseMessage.OK, "Project '" + projectName + "' is saved."))
+                .build();
+    }
+}
